# agent-computer-use

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SKILL.md  package.json
.changeset/: config.json  icy-foxes-spin.md  loud-yaks-play.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/crates/agent-click-linux/: Cargo.toml
cli/crates/agent-click-linux/src/: atspi.rs  input.rs  platform.rs
cli/crates/agent-computer-use-cdp/src/: connection.rs  detect.rs
cli/src/: main.rs  setup.rs  snapshot.rs
cli/src/cli/: args.rs  handlers.rs
docker/: docker-compose.yml
docs/src/app/: page.tsx
docs/src/app/ai-mode/: page.mdx
docs/src/app/background/: page.mdx
docs/src/app/batch/: page.mdx
docs/src/app/commands/: page.mdx
docs/src/app/commands/click/: page.mdx
docs/src/app/commands/snapshot/: page.mdx
docs/src/app/commands/type/: page.mdx
docs/src/app/installation/: page.mdx
docs/src/app/options/: page.mdx
docs/src/app/quickstart/: page.mdx
docs/src/app/selectors/: page.mdx
docs/src/app/snapshots/: page.mdx
docs/src/app/workflows/: page.mdx
docs/src/components/: copy-page.tsx  docs-layout.tsx  install-tabs.tsx
scripts/: build-all.sh  bundle-npm.sh  setup.sh
skills/agent-computer-use/: SKILL.md
